feat(login): Add image

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,7 @@
 <div class="login-container">
+    <img class="film" src="assets/images/film.jpg" alt="film">
     <div class="logo">Rotten Potato</div>
     <div class="desc"> 
-        Rotten Potatoes is the world's most trusted recommenation resources for quality entertainment. As the leading ...
+        Rotten Potatoes is the world's most trusted recommendation resources for quality entertainment. As the leading ...
     </div>
 </div>
