--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,8 @@
 .login-container {
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(150deg, rgb(255, 242, 0) 10%, red 90%);
+    background: linear-gradient(150deg, blue 10%, green 90%);
+    color: white;
     .logo {
         font-size: 70px;
         font-weight: 600;
@@ -19,5 +20,13 @@
         top: 200px;
         right: 50px;
         text-align: right;
+        width: 1200px;
+    }
+    .film {
+        position: absolute;
+        top: 50px;
+        left: 50px;
+        width: 500px;
+        height: 600px;
     }
 }
